# proyecto

./: CMakeLists.txt  README.md
src/: constantes.h  constants.h  record.h  request.h
src/client/: main.cpp
src/lock_file/: LockFile.cpp  LockFile.h
src/logger/: Log.cpp  Log.h
src/manager/: Database.cpp  Database.h  main.cpp
src/msgqueue/: Cola.h  MsgQueue.h
src/semaphore/: Semaphore.cpp  Semaphore.h
src/signals/: SignalHandler.cpp  SignalHandler.h
